--- a/Lang/EN/translate.json
+++ b/Lang/EN/translate.json
@@ -107,6 +107,7 @@
     "five_stars": "5 Stars",
     "traditional": "Traditional",
     "acrobatic": "Acrobatic",
+    "outfield": "Outfield",
     "age": "Age",
     "age_desc": "Player Age",
     "birthday": "Birth Day",
@@ -593,40 +594,71 @@
     "potential_desc": "Potential",
     "overallrating_desc": "Overall Rating",
     "modifier_desc": "Modifier - Modifies player overall rating without editing attributes\ni.e if player real ovr is 80 and modifier is 2 then in game player ovr will be 82",
-    "crossing_desc": "Crossing",
-    "finishing_desc": "Finishing",
-    "headingaccuracy_desc": "Heading Acc.",
-    "shortpassing_desc": "Short Pass.",
-    "volleys_desc": "Volleys",
-    "marking_desc": "Defensive Awareness (Marking)",
-    "standingtackle_desc": "Standing Tackle",
-    "slidingtackle_desc": "Sliding Tackle",
-    "dribbling_desc": "Dribbling",
-    "curve_desc": "Curve",
-    "freekickaccuracy_desc": "FK. Acc.",
-    "longpassing_desc": "Long Passing",
-    "ballcontrol_desc": "Ball Control",
-    "shotpower_desc": "Shot Power",
-    "jumping_desc": "Jumping",
-    "stamina_desc": "Stamina",
-    "strength_desc": "Strength",
-    "longshots_desc": "Long Shots",
-    "acceleration_desc": "Acceleration",
-    "sprintspeed_desc": "Sprint Speed",
-    "agility_desc": "Agility",
-    "reactions_desc": "Reactions",
-    "balance_desc": "Balance",
-    "aggression_desc": "Aggression",
-    "composure_desc": "Composure",
-    "interceptions_desc": "Interceptions",
-    "positioning_desc": "Att. Pos.",
-    "vision_desc": "Vision",
-    "penalties_desc": "Penalties",
-    "gkdiving_desc": "GK Diving",
-    "gkhandling_desc": "GK Handling",
-    "gkkicking_desc": "GK Kicking",
-    "gkpositioning_desc": "GK Positioning",
-    "gkreflexes_desc": "GK Reflexes",
+    "crossing_desc": "A good Crossing attribute will increase the chances of finding your team mates & avoiding the opposition.",
+    "finishing_desc": "A good Finishing attribute will increase your chances of beating the keeper with shots inside the box.",
+    "headingaccuracy_desc": "A good Heading Accuracy will increase your timing & improve your accuracy when heading at goal.",
+    "shortpassing_desc": "The better your Short Passing, the less likely it will be that your player misplaces passes.",
+    "volleys_desc": "A good rating will increase your chances of connecting & scoring with a Volley to leave the keeper helpless.",
+    "marking_desc": "Increasing your Marking attribute will improve the default position your player takes up when your team is not in possession of the ball.",
+    "standingtackle_desc": "A good Standing Tackle rating will mean you are more likely to come out with the ball when putting your foot in.",
+    "slidingtackle_desc": "The higher the value the greater your chance of being successful with Sliding Tackles.",
+    "dribbling_desc": "It enables a player to take faster touches on the ball, allows them to make faster dribbling turns, and gives them the ability to recover the ball from tackles better.",
+    "curve_desc": "The higher your Curve rating the more bend & swerve you'll get on the ball when shooting & crossing.",
+    "freekickaccuracy_desc": "A high Free Kick Accuracy increases your chances of avoiding the wall & beating the keeper from dead ball situations.",
+    "longpassing_desc": "Increase your Long Passing to turn defence into attack with improved accuracy & more powerful lobbed passes.",
+    "ballcontrol_desc": "The better your Ball Control, the more likely your player will be to take a good first touch when receiving the ball. ",
+    "shotpower_desc": "The higher your Shot Power the more venom you'll get on shots of any type & from any distance.",
+    "jumping_desc": "The higher your jumping the more likely you'll be to beat opposition players to aerial balls.",
+    "stamina_desc": "A good Stamina rating will increase the amount of time your player can spend sprinting during a game as well as improve recovery time.",
+    "strength_desc": "Strength will increase your chances of winning physical challenges with opposition players.",
+    "longshots_desc": "The better your Long Shots the more likely you'll be to beat the keeper with shots from outside the box.",
+    "acceleration_desc": "Increasing your Acceleration will improve your player's speed off the mark & reduce the time it takes to reach your maximum Sprint Speed",
+    "sprintspeed_desc": "Modifies the maximum sprint speed a player can reach",
+    "agility_desc": "Agile players can turn quicker & are more likely to attempt spectacular headers, volleys & bicycle kicks.",
+    "reactions_desc": "Good reactions will allow you to latch onto loose balls & rebounds quicker than other players.",
+    "balance_desc": "A good Balance rating will reduce your chances of stumbling & falling when challenged by an opponent.",
+    "aggression_desc": "Aggression will increase your chances of coming out on top in a 50/50 challenge with the opposition.",
+    "composure_desc": "Determines at what distance the player with ball starts feeling pressure from the opponent.\nAffects the chances of making an error when shoot, pass and cross.",
+    "interceptions_desc": "Increases your ability to intercept passes made by your opponents",
+    "positioning_desc": "The higher the rating the better your player will position themselves by default following the ball going out of play.",
+    "vision_desc": "Vision will increase your ability to play accurate & intricate through balls to set up your team mates with scoring chances.",
+    "penalties_desc": "A good rating will increase your chances of tucking away Penalties & give the keeper no chance.",
+    "gkdiving_desc": "Help the goalkeeper play faster, more accurate dives. Also, helps be more successful when diving at an attacker in a 1 on 1 situation.",
+    "gkhandling_desc": "Increases the GKs ability to grab the ball with his hands. High attribute will cause the GK to be faster to grab the ball.",
+    "gkkicking_desc": "Goalkeeper Kicking defines how far a keeper can kick the ball during goal kicks and drop kicks.",
+    "gkpositioning_desc": "Affects how well the GK is at placing himself correctly in his goal.\nGK with good positioning will more likely be in the correct place in his goal to defend against all types of shots.",
+    "gkreflexes_desc": "Affect the GKs ability to quickly react to shots or deflections.\nPlayer with high Reflex attributes will be able to better react to deflections, and be faster to react to shots, free kicks, and penalty kicks.\nThey will also be faster when trying to dive at a players feet to strip the ball off them",
+    "long_throwin_desc": "[Standard]:\nWhen a player with this Trait performs a throw-in using the X/Square button, the maximum distance of the throw is longer than that of a player without the Trait.\n\n[Standard]:\nIf the opportunity for a quick throw-in has passed, players with this Trait will be more likely to be considered the optimal selection for taking a throw-in where executing a long throw could boost the chance for a scoring opportunity.",
+    "power_freekick_desc": "[Standard]:\nA player with this Trait will start their free kick run-up from further back, producing a more powerful free kick.\n\n[CPU AI]:\nA CPU AI-controlled player with this Trait will be more likely to choose a driven free kick over a finesse free kick.",
+    "injury_prone_desc": "[Standard]:\nA player with this Trait has an increased chance of getting injured when a collision occurs.",
+    "solid_player_desc": "[Standard]:\nA player with this Trait has a reduced chance of getting injured when a collision occurs",
+    "dives_into_tackles_cpu_desc": "[CPU AI]\nA CPU AI-controlled player with this Trait will be more likely to use a sliding tackle instead of a standing tackle.",
+    "leadership_desc": "[Standard]:\nUsed, along with One Club Player and Team Player, as part of the decision-making process in choosing a captain for a team if the designated captain is not in the lineup or is removed mid-game via a substitution or red card.",
+    "early_crosser_desc": "[CPU AI]:\nA CPU AI player with this Trait will be more likely to attempt an early cross.",
+    "finesse_shot_desc": "[Standard]:\nA player with this Trait will get the full amount of curl when he takes a finesse shot when the ball is on the ground. This can change how the ball will get to the target, but it does not change the target itself.\n\n[CPU AI]:\nA CPU AI-controlled player with this Trait is more likely to shoot in general, and will prefer to take a finesse shot.",
+    "flair_desc": "[Standard]:\nA player with this Trait will be less likely to make errors when attempting flair moves.\n\n[Standard]:\nA human-controlled player with this Trait will sometimes execute a flair pass or flair shot without having used the flair modifier controls.\n\n[Standard]:\nA player with this Trait will use a higher lob for their short lob passes if there are players in the way.\n\n[CPU AI]:\nA CPU AI-controlled player with this Trait is more likely to use flair passes or flair shots.\n\n[CPU AI]:\nA CPU AI-controlled player with this Trait will be more likely to stutter during a penalty kick runup, and more likely to execute a chip shot penalty.",
+    "long_passer_cpu_desc": "[CPU AI]:\nA CPU AI-controlled player with this Trait is more likely to attempt long passes.",
+    "long_shot_taker_cpu_desc": "[CPU AI]:\nA CPU AI-controlled player with this Trait will be more likely to try and take long shots when running with the ball and more likely to try long volley shots.",
+    "speed_dribbler_cpu_desc": "[CPU AI]:\nA CPU AI-controlled player with this Trait will be more likely to go on a long run or to attempt a zigzag dribble.",
+    "playmaker_cpu_desc": "[CPU AI]:\nA CPU AI-controlled player with this Trait will be given the ball by their teammates more often, allowing them to dictate more of the offense.\n\n[CPU AI]:\nA CPU AI-controlled player with this Trait will make faster passing decisions.",
+    "gk_long_throw_desc": "[Standard]:\nA goalkeeper with this Trait will have the ability to target players further away with thrown passes.\n\n[CPU AI]:\nA CPU AI-controlled goalkeeper will sometimes decide to perform a driven-style throw when making a long throw.",
+    "power_header_desc": "[Standard]:\nA player with this Trait will have more powerful headers.\n\n[Standard]:\nA player with this Trait is more likely to be selected to fill a target position in the opposing penalty area during an attacking corner kick, and is less likely to be selected as the support player when the kick taker requests support for a short corner.",
+    "giant_throwin_desc": "[Standard]:\nWhen a player with this Trait performs a throw-in using the X/Square Button, the maximum distance of the throw is longer than a player without this Trait or with just the Long Throw-In Trait.\n\n[Standard]:\nIf the opportunity for a quick throw-in has passed, players with this Trait will be more likely to be considered the optimal selection for taking a throw-in where executing a long throw could boost the chance for a scoring opportunity.",
+    "outside_foot_shot_desc": "[Standard]:\nA player with this Trait will be able to perform an outside of the foot shot regardless of their Finishing attribute value.\n\n[Standard]:\nA player with this Trait will have reduced difficulty in executing an accurate outside of the foot shot.",
+    "swerve_pass_desc": "[Standard]:\nA player with this Trait will have reduced difficulty in executing an accurate outside of the foot shot.\n\n[Standard]:\nA player with this Trait will have the full amount of curl when passing the ball on the ground. This can change the path for how the ball will get to the target, but it does not change the target itself.",
+    "second_wind_desc": "A Virtual Pro with this Trait will have less fatigue towards the end of a match after the 75 minute mark, if they are currently losing the match.",
+    "flair_passes_desc": "[Standard]:\nA player with this Trait will be less likely to make errors when attempting flair passes.\n\n[CPU AI]:\nA CPU AI-controlled player with this Trait is able to use flair passes.",
+    "bicycle_kicks_desc": "Acquiring this Trait in Player Career will allow the Pro to perform bicycle kicks in certain situations, but you will not be able to force bicycle kicks when L2/LT is held.",
+    "gk_flat_kick_desc": "Acquiring this Trait in Player Career will allow goalkeeper Pros to perform driven side kicks when holding R1/RB.",
+    "one_club_player_desc": "[Standard]:\nUsed, along with Leadership and Team Player, as part of the decision-making process in choosing a captain for a team if the designated captain is not in the lineup or is removed mid-game via a substitution or red card.\n\n[Career Mode]:\nPlayers with this Trait are known to be loyal to their current club, which will drive storylines in Career Mode.",
+    "team_player_desc": "[Standard]:\nUsed, along with One Club Player and Leadership, as part of the decision-making process in choosing a captain for a team if the designated captain is not in the lineup or is removed mid-game via a substitution or red card.\n\n[Career Mode]:\nPlayers with this Trait put loyalty to their club above their own personal interests, which will drive storylines in Career Mode. This has no effect on gameplay.",
+    "chip_shot_cpu_desc": "[CPU AI]:\nA CPU AI-controlled player with this Trait will be more likely to try to chip the keeper when given the opportunity.\n\n[CPU AI]:\nA CPU AI-controlled player with this Trait will be more likely to try to chip the keeper when given the opportunity.",
+    "technical_dribbler_cpu_desc": "[CPU AI]:\nA CPU AI-controlled player with this Trait will be more likely to go on a long run or attempt a zigzag dribble.\n\n[CPU AI]:\nA CPU AI-controlled player with this Trait will be more likely to be called as a support player for a short corner kick.",
+    "gk_rushes_out_of_goal_desc": "[Standard]:\nA goalkeeper with this Trait will be more aggressive when coming out of the box to gather over the top or long through balls.",
+    "gk_cautious_with_crosses_desc": "[Standard]:\nA goalkeeper with this Trait will only try to intercept a cross when they think they can get to the ball well before their opponent.",
+    "gk_comes_for_crosses_desc": "[Standard]:\nA goalkeeper with this Trait will try to intercept a cross even if they think they will get to the ball barely before their opponent.",
+    "gk_saves_with_feet_desc": "[Standard]:\nA goalkeeper with this Trait will frequently choose to save the ball with his feet, allowing them to save a slightly higher frequency of close-range shots than a goalkeeper with the same attributes that did not have the GK Save With Foot Trait.",
+    "set_play_specialist_desc": "A Virtual Pro with this Trait will no longer have the aiming reticule recenter when the stick is released during a set play.",
     "firstnameid_desc": "First Name ID",
     "lastnameid_desc": "Last Name ID",
     "commonnameid_desc": "Common Name ID",
@@ -1114,6 +1146,63 @@
     "possession": "Possession",
     "long_ball": "Long Ball",
     "fast_build_up": "Fast Build Up",
+    "skintonecode_1": "Caucasian 1",
+    "skintonecode_2": "Caucasian 2",
+    "skintonecode_3": "Caucasian 3",
+    "skintonecode_4": "Latin Asian 1",
+    "skintonecode_5": "Latin Asian 2",
+    "skintonecode_6": "Latin Asian 3",
+    "skintonecode_7": "Latin Asian 4",
+    "skintonecode_8": "African 1",
+    "skintonecode_9": "African 2",
+    "skintonecode_10": "African 3",
+    "socklengthcode_0": "Average",
+    "socklengthcode_1": "Short",
+    "socklengthcode_2": "High",
+    "socklengthcode_3": "Ankle",
+    "socklengthcode_4": "Average no shimpad",
+    "shortstyle_0": "GK Shorts",
+    "shortstyle_1": "GK Pants",
+    "jerseysleevelengthcode_0": "Short",
+    "jerseysleevelengthcode_1": "Long",
+    "jerseysleevelengthcode_2": "Seasonal Undershirt",
+    "jerseysleevelengthcode_3": "Seasonal Undershirt and Turtleneck",
+    "jerseyfit_0": "Normal",
+    "jerseyfit_1": "Tight",
+    "jerseyfit_2": "Team Kit Fit",
+    "jerseystylecode_0": "Tucked In",
+    "jerseystylecode_1": "Untucked",
+    "jerseystylecode_2": "Half Tuck",
+    "facialhaircolor_0": "Black",
+    "facialhaircolor_1": "Blonde",
+    "facialhaircolor_2": "Dark Brown",
+    "facialhaircolor_3": "Medium Brown",
+    "facialhaircolor_4": "Red",
+    "haircolor_0": "Blonde",
+    "haircolor_1": "Black",
+    "haircolor_2": "Dirty Blonde",
+    "haircolor_3": "Dark Brown",
+    "haircolor_4": "Light Blonde",
+    "haircolor_5": "Light Brown",
+    "haircolor_6": "Medium Brown",
+    "haircolor_7": "Red",
+    "haircolor_8": "White",
+    "haircolor_9": "Silver",
+    "haircolor_10": "Green",
+    "haircolor_11": "Blue",
+    "haircolor_12": "Ginger",
+    "haircolor_13": "Dark Red",
+    "haircolor_14": "Pink",
+    "eyecolor_1": "Blue",
+    "eyecolor_2": "Light Blue",
+    "eyecolor_3": "Brown",
+    "eyecolor_4": "Light Brown",
+    "eyecolor_5": "Hazel",
+    "eyecolor_6": "Green",
+    "eyecolor_7": "Light Green",
+    "eyecolor_8": "Medium Blue",
+    "eyecolor_9": "Dark Brown",
+    "eyecolor_10": "Saturated Green",
     "pos_0_abbr": "GK",
     "pos_1_abbr": "SW",
     "pos_2_abbr": "RWB",
@@ -1438,5 +1527,4 @@
     "log_game_logs": "Intercept Game Logger",
     "log_luaL_tolstring": "Intercept luaL_tolstring",
     "format_test": "format test, n: {number}, s: {somestring}"
-
 }
